tests/negative/gold/abstract6_test.gold
tests/negative/abstract6_test.toit:10:7: error: Non-abstract class 'C' is missing implementations
class C extends B:
      ^
tests/negative/abstract6_test.toit:8:12: note: Missing implementation for 'foo'
  abstract foo
           ^~~
Compilation failed.
